# big-pickle-blogging

./: .gitignore  Makefile  pyproject.toml
app/: database.py  main.py
app/routes/: articles.py  auth.py
frontend/: index.html
frontend/static/: app.js  styles.css
